# gadgetron

./: FrameAccumulatorGadget.cpp  default_bb.xml
gadgets/interventional_mri/: BufferSVDGadget.cpp  BufferSVDGadget.h  CMakeLists.txt  FrameAccumulatorGadget.cpp  FrameAccumulatorGadget.h  FrameAccumulatorGadget_v1.cpp  FrameAccumulatorGadget_v1.h  default_bb.xml
